Add non-functional outreach hours add.

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -42,6 +42,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'man:hours' %}">Hours</a>
             </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'man:outreach_hours_add' %}">Log Outreach</a>
+                </li>
             {% endif %}
         </ul>
         <ul class="navbar-nav ml-auto">
