--- a/teammanager/templates/teammanager/outreach_hours_add.html
+++ b/teammanager/templates/teammanager/outreach_hours_add.html
@@ -16,6 +16,7 @@
                             <label for="date">Date</label>
                             <input class="form-control" type="date" name="date" id="date">
                         </div>
+                        <!--
                         <div class="form-group">
                             <label for="start">Start</label>
                             <input class="form-control" type="time" name="start" id="start">
@@ -24,12 +25,21 @@
                             <label for="end">End</label>
                             <input class="form-control" type="time" name="end" id="end">
                         </div>
+                        -->
                         <h6>Members:</h6>
                         {% for member in members %}
+                            <!--
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox"
                                        name="mbr-{{ member.id }}" id="chk-{{ member.id }}">
                                 <label for="chk-{{ member.id }}">{{ member }}</label>
+                            </div>
+                            -->
+
+                            <div class="form-group form-inline">
+                                <label for="hrs-{{ member.id }}">{{ member }}</label>
+                                <input class="form-control ml-auto" type="number" name="hrs-{{ member.id }}"
+                                       id="hrs-{{ member.id }}">
                             </div>
                         {% endfor %}
                     </form>
