Split hours view into two tables.

--- a/teammanager/templates/teammanager/partial/hours_table.html
+++ b/teammanager/templates/teammanager/partial/hours_table.html
@@ -1,14 +1,34 @@
-<table class="table table-striped table-hover text-left" id="table">
-    <tr>
+<div class="row">
+  <div class="col-sm-12 col-lg-6">
+    <table class="table table-striped table-hover text-left" id="table">
+      <tr>
         {% for cell in head %}
-            <th>{{ cell }}</th>
+          <th>{{ cell }}</th>
         {% endfor %}
-    </tr>
-    {% for row in rows %}
+      </tr>
+      {% for row in students %}
         <tr>
-            {% for cell in row %}
-                <td>{{ cell }}</td>
-            {% endfor %}
+          {% for cell in row %}
+            <td>{{ cell }}</td>
+          {% endfor %}
         </tr>
-    {% endfor %}
-</table>
+      {% endfor %}
+    </table>
+  </div>
+  <div class="col-sm-12 col-lg-6">
+    <table class="table table-striped table-hover text-left" id="table">
+      <tr>
+        {% for cell in head %}
+          <th>{{ cell }}</th>
+        {% endfor %}
+      </tr>
+      {% for row in adults %}
+        <tr>
+          {% for cell in row %}
+            <td>{{ cell }}</td>
+          {% endfor %}
+        </tr>
+      {% endfor %}
+    </table>
+  </div>
+</div>
