--- a/teammanager/templates/teammanager/partial/hours_table.html
+++ b/teammanager/templates/teammanager/partial/hours_table.html
@@ -1,4 +1,5 @@
 <div class="row">
+  {% if students %}
   <div class="col-sm-12 col-lg-6">
     <table class="table table-striped table-hover text-left" id="table">
       <tr>
@@ -15,6 +16,8 @@
       {% endfor %}
     </table>
   </div>
+  {% endif %}
+  {% if adults %}
   <div class="col-sm-12 col-lg-6">
     <table class="table table-striped table-hover text-left" id="table">
       <tr>
@@ -32,3 +35,4 @@
     </table>
   </div>
 </div>
+  {% endif %}
