Update to match real Bacon green

--- a/teammanager/bootstrap/scss/_variables.scss
+++ b/teammanager/bootstrap/scss/_variables.scss
@@ -41,7 +41,7 @@ $pink: #e83e8c !default;
 $red: #dc3545 !default;
 $orange: #ee4c23 !default;
 $yellow: #ffc107 !default;
-$green: #0d9647 !default;
+$green: #50b04d !default;
 $darkgreen: #07612d !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
