--- a/teammanager/templates/teammanager/index.html
+++ b/teammanager/templates/teammanager/index.html
@@ -1,7 +1,8 @@
 {% extends 'teammanager/base.html' %}
 
 {% block content %}
-  <div class="row justify-content-center mt-3">
+
+  <div class="row">
     <div class="col-sm-12 col-md-8">
       <div class="jumbotron">
         <h1 class="display-4">Welcome to Pigpen</h1>
@@ -16,5 +17,8 @@
         {% endif %}
       </div>
     </div>
+  <div class="col-sm-12 col-md-4 col-lg-4">
+    
+  </div>
   </div>
 {% endblock %}
