--- a/teammanager/templates/teammanager/index.html
+++ b/teammanager/templates/teammanager/index.html
@@ -1,9 +1,12 @@
 {% extends 'teammanager/base.html' %}
 
+{% load static %}
+
 {% block content %}
 
   <div class="row">
-    <div class="col-sm-12 col-md-8">
+
+    <div class="offset-sm-0 col-sm-12 offset-md-1 col-md-7">
       <div class="jumbotron">
         <h1 class="display-4">Welcome to Pigpen</h1>
         <p class="lead">Exploding Bacon's internal Team Management System.</p>
@@ -17,8 +20,38 @@
         {% endif %}
       </div>
     </div>
-  <div class="col-sm-12 col-md-4 col-lg-4">
-    
+  <div class="col-sm-12 col-md-4 col-lg-3">
+    <div class="text-center">
+      <br>
+      <h2>Hours Leaderboard:</h2>
+      <br>
+      {% for student in students %}
+        {% if forloop.counter == 1 %}
+          <h3 class="text-secondary">
+        {% elif forloop.counter == 2 %}
+          <h4>
+        {% elif forloop.counter == 3 %}
+          <h5>
+        {% else %}
+          <h6>
+        {% endif %}
+        {% if forloop.counter < 4 %}
+          <img class="rounded-circle" src="{% static 'teammanager/no_profile.png' %}" style="width: 3em; height:auto;">
+          <br>
+        {% endif %}
+          {{ forloop.counter }}. {{ student.0 }}<br><span class="text-muted">{{ student.1 }} hours</span>
+        {% if forloop.counter == 1 %}
+          </h3>
+        {% elif forloop.counter == 2 %}
+          </h4>
+        {% elif forloop.counter == 3 %}
+          </h5>
+        {% else %}
+          </h6>
+        {% endif %}
+        <hr>
+      {% endfor %}
+    </div>
   </div>
   </div>
 {% endblock %}
