--- a/teammanager/templates/teammanager/index.html
+++ b/teammanager/templates/teammanager/index.html
@@ -19,39 +19,44 @@
             <a href="https://www.explodingbacon.com/">www.explodingbacon.com</a>. </p>
         {% endif %}
       </div>
+      <iframe class="w-100" style="height: 500px;" frameborder="0"
+              src="https://calendar.google.com/calendar/embed?mode=AGENDA&height=600&wkst=1&bgcolor=%23ffffff&src=explodingbacon.team1902%40gmail.com&color=%2350b04d&ctz=America%2FNew_York"></iframe>
     </div>
-  <div class="col-sm-12 col-md-4 col-lg-3">
-    <div class="text-center">
-      <br>
-      <h2>Hours Leaderboard:</h2>
-      <br>
-      {% for student in students %}
-        {% if forloop.counter == 1 %}
-          <h3 class="text-secondary">
-        {% elif forloop.counter == 2 %}
-          <h4>
-        {% elif forloop.counter == 3 %}
-          <h5>
-        {% else %}
-          <h6>
-        {% endif %}
-        {% if forloop.counter < 4 %}
-          <img class="rounded-circle" src="{% static 'teammanager/no_profile.png' %}" style="width: 3em; height:auto;">
-          <br>
-        {% endif %}
-          {{ forloop.counter }}. {{ student.0 }}<br><span class="text-muted">{{ student.1 }} hours</span>
-        {% if forloop.counter == 1 %}
-          </h3>
-        {% elif forloop.counter == 2 %}
-          </h4>
-        {% elif forloop.counter == 3 %}
-          </h5>
-        {% else %}
-          </h6>
-        {% endif %}
-        <hr>
-      {% endfor %}
+    <div class="col-sm-12 col-md-4 col-lg-3">
+      <div class="text-center">
+        <br>
+        <h2>Hours Leaderboard:</h2>
+        <br>
+        {% for student in students %}
+          <div class="mb-0">
+            {% if forloop.counter == 1 %}
+              <h3 class="text-secondary">
+            {% elif forloop.counter == 2 %}
+              <h4>
+            {% elif forloop.counter == 3 %}
+              <h5>
+            {% else %}
+              <h6>
+            {% endif %}
+            {% if forloop.counter < 4 %}
+              <img class="rounded-circle mb-2" src="{% static 'teammanager/no_profile.png' %}"
+                   style="width: 3em; height:auto;">
+              <br>
+            {% endif %}
+            {{ student.0 }}<br><span class="text-muted">{{ student.1 }} hours</span>
+            {% if forloop.counter == 1 %}
+              </h3>
+            {% elif forloop.counter == 2 %}
+              </h4>
+            {% elif forloop.counter == 3 %}
+              </h5>
+            {% else %}
+              </h6>
+            {% endif %}
+          </div>
+          <hr>
+        {% endfor %}
+      </div>
     </div>
-  </div>
   </div>
 {% endblock %}
