--- a/teammanager/templates/teammanager/index.html
+++ b/teammanager/templates/teammanager/index.html
@@ -39,9 +39,9 @@
               <h6>
             {% endif %}
             {% if forloop.counter < 4 %}
-              <img class="rounded-circle mb-2" src="{% static 'teammanager/no_profile.png' %}"
-                   style="width: 3em; height:auto;">
-              <br>
+              <img class="rounded-circle mb-2"
+                     src="{{ student.4 }}"
+                     style="width: 3em; height:auto;"><br>
             {% endif %}
             {{ student.0 }}<br><span class="text-muted">{{ student.1 }} hours</span>
             {% if forloop.counter == 1 %}
