--- a/teammanager/templates/teammanager/location.html
+++ b/teammanager/templates/teammanager/location.html
@@ -19,10 +19,10 @@
 
       <br>
       <h5>Students</h5>
-      <div class="d-flex flex-row justify-content-left flex-wrap text-center">
+      <div class="row">
         {% for member in members %}
           {% if member.position == "stu" and member.isIn %}
-            <div class="p-2">
+            <div class="col-3 col-sm-2 text-center mb-3">
               <small>
                 <img class="rounded-circle mb-2"
                      src="{{ member.avatar }}"
@@ -36,10 +36,10 @@
       </div>
     <br>
     <h5>Adults</h5>
-      <div class="d-flex flex-row justify-content-left flex-wrap text-center">
+      <div class="row">
         {% for member in members %}
           {% if not member.position == "stu" and member.isIn %}
-            <div class="p-2">
+            <div class="col-3 col-sm-2 text-center mb-3">
               <small>
                 <img class="rounded-circle mb-2"
                      src="{{ member.avatar }}"
@@ -57,10 +57,10 @@
       <h3 class="text-center">Not</h3>
       <br>
       <h5>Students</h5>
-      <div class="d-flex flex-row justify-content-left flex-wrap text-center">
+      <div class="row">
         {% for member in members %}
           {% if member.position == "stu" and not member.isIn %}
-            <div class="p-2">
+            <div class="col-3 col-sm-2 text-center mb-3">
               <small>
                 <img class="gray rounded-circle mb-2"
                      src="{{ member.avatar }}"
@@ -74,10 +74,10 @@
       </div>
     <br>
     <h5>Adults</h5>
-      <div class="d-flex flex-row justify-content-left flex-wrap text-center">
+      <div class="row">
         {% for member in members %}
           {% if not member.position == "stu" and not member.isIn %}
-            <div class="p-2">
+            <div class="col-3 col-sm-2 text-center mb-3">
               <small>
                 <img class="gray rounded-circle mb-2"
                      src="{{ member.avatar }}"
