Better hour leaderboard times, tweak to location page

--- a/teammanager/templates/teammanager/index.html
+++ b/teammanager/templates/teammanager/index.html
@@ -43,7 +43,7 @@
                      src="{{ student.4 }}"
                      style="width: 3em; height:auto;"><br>
             {% endif %}
-            {{ student.0 }}<br><span class="text-muted">{{ student.1 }} hours</span>
+            {{ student.0 }}<br><span class="text-muted">{{ student.2 }}h {{ student.3 }}m</span>
             {% if forloop.counter == 1 %}
               </h3>
             {% elif forloop.counter == 2 %}
