--- a/teammanager/templates/teammanager/location.html
+++ b/teammanager/templates/teammanager/location.html
@@ -10,86 +10,86 @@
   </style>
   <br>
   <div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <h3 class="text-center">
-        Checked In
-      </h3>
-      <!--<h5 class="text-muted text-center"><i>As of 1:14 PM</i></h5>-->
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h3 class="text-center">
+          Checked In
+        </h3>
+        <!--<h5 class="text-muted text-center"><i>As of 1:14 PM</i></h5>-->
 
-      <hr>
-      <h5>Students</h5>
-      <div class="row">
-        {% for member in members %}
-          {% if member.position == "stu" and member.isIn %}
-            <div class="col-3 col-sm-2 text-center mb-3">
-              <small>
-                <img class="rounded-circle mb-2"
-                     src="{{ member.avatar }}"
-                     style="width: 3em; height:auto;"><br>
-                {{ member.name }}
-              </small>
+        <hr>
+        <h5>Students</h5>
+        <div class="row">
+          {% for member in members %}
+            {% if member.position == "stu" and member.isIn %}
+              <div class="float-left text-center" style="width: 60px; padding-bottom: 16px;">
+                <small>
+                  <img class="rounded-circle mb-2"
+                       src="{{ member.avatar }}"
+                       style="width: 3em; height:auto;"><br>
+                  {{ member.name }}
+                </small>
 
-            </div>
-          {% endif %}
-        {% endfor %}
+              </div>
+            {% endif %}
+          {% endfor %}
+        </div>
+        <br>
+        <h5>Adults</h5>
+        <div class="row">
+          {% for member in members %}
+            {% if not member.position == "stu" and member.isIn %}
+              <div class="float-left text-center" style="width: 60px; padding-bottom: 16px;">
+                <small>
+                  <img class="rounded-circle mb-2"
+                       src="{{ member.avatar }}"
+                       style="width: 3em; height:auto;"><br>
+                  {{ member.name }}
+                </small>
+                <br>
+              </div>
+            {% endif %}
+          {% endfor %}
+        </div>
       </div>
-    <br>
-    <h5>Adults</h5>
-      <div class="row">
-        {% for member in members %}
-          {% if not member.position == "stu" and member.isIn %}
-            <div class="col-3 col-sm-2 text-center mb-3">
-              <small>
-                <img class="rounded-circle mb-2"
-                     src="{{ member.avatar }}"
-                     style="width: 3em; height:auto;"><br>
-                {{ member.name }}
-              </small>
-              <br>
-            </div>
-          {% endif %}
-        {% endfor %}
+
+      <div class="col-sm-12 col-md-6">
+        <h3 class="text-center">Not</h3>
+        <hr>
+        <h5>Students</h5>
+        <div class="row">
+          {% for member in members %}
+            {% if member.position == "stu" and not member.isIn %}
+              <div class="float-left text-center" style="width: 60px; padding-bottom: 16px;">
+                <small>
+                  <img class="gray rounded-circle mb-2"
+                       src="{{ member.avatar }}"
+                       style="width: 3em; height:auto;"><br>
+                  {{ member.name }}
+                </small>
+
+              </div>
+            {% endif %}
+          {% endfor %}
+        </div>
+        <br>
+        <h5>Adults</h5>
+        <div class="row">
+          {% for member in members %}
+            {% if not member.position == "stu" and not member.isIn %}
+              <div class="float-left text-center" style="width: 60px; padding-bottom: 16px;">
+                <small>
+                  <img class="gray rounded-circle mb-2"
+                       src="{{ member.avatar }}"
+                       style="width: 3em; height:auto;"><br>
+                  {{ member.name }}
+                </small>
+                <br>
+              </div>
+            {% endif %}
+          {% endfor %}
+        </div>
       </div>
     </div>
-
-    <div class="col-sm-12 col-md-6">
-      <h3 class="text-center">Not</h3>
-      <hr>
-      <h5>Students</h5>
-      <div class="row">
-        {% for member in members %}
-          {% if member.position == "stu" and not member.isIn %}
-            <div class="col-3 col-sm-2 text-center mb-3">
-              <small>
-                <img class="gray rounded-circle mb-2"
-                     src="{{ member.avatar }}"
-                     style="width: 3em; height:auto;"><br>
-                {{ member.name }}
-              </small>
-
-            </div>
-          {% endif %}
-        {% endfor %}
-      </div>
-    <br>
-    <h5>Adults</h5>
-      <div class="row">
-        {% for member in members %}
-          {% if not member.position == "stu" and not member.isIn %}
-            <div class="col-3 col-sm-2 text-center mb-3">
-              <small>
-                <img class="gray rounded-circle mb-2"
-                     src="{{ member.avatar }}"
-                     style="width: 3em; height:auto;"><br>
-                {{ member.name }}
-              </small>
-              <br>
-            </div>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </div>
-  </div>
   </div>
 {% endblock %}
