--- a/teammanager/templates/teammanager/location.html
+++ b/teammanager/templates/teammanager/location.html
@@ -9,8 +9,8 @@
     }
   </style>
   <br>
-  <div class="container">
-    <div class="row">
+  <div class="container-fluid">
+    <div class="row mx-xl-5">
       <div class="col-sm-12 col-md-6">
         <h3 class="text-center">
           Checked In
