--- a/teammanager/templates/teammanager/families.html
+++ b/teammanager/templates/teammanager/families.html
@@ -7,7 +7,7 @@
       <h2 class="mt-5 mb-4 text-center">{{ family }}</h2>
       <div class="row justify-content-center mb-5">
         {% for member in family.member_set.all %}
-          <div class="col-3 justify-content-center text-center">
+          <div class="col-sm-12 col-md-6 col-xl-3 justify-content-center text-center">
             <img class="rounded-circle w-50 mb-3" src="{{ member.get_avatar }}">
             <h5>{{ member }}</h5>
             <p class="text-muted">{{ member.get_role_display }}</p>
