--- a/teammanager/templates/teammanager/families.html
+++ b/teammanager/templates/teammanager/families.html
@@ -4,10 +4,10 @@
 {% block content %}
   <div class="container-fluid">
     {% for family in families %}
-      <h2 class="mt-5 mb-4 text-center">{{ family }}</h2>
-      <div class="row justify-content-center mb-5">
+      <h2 class="mt-5 mb-5 text-center">{{ family }}</h2>
+      <div class="row justify-content-center mb-1">
         {% for member in family.member_set.all %}
-          <div class="col-sm-12 col-md-6 col-xl-3 justify-content-center text-center">
+          <div class="col-sm-12 col-md-6 col-xl-3 mb-4 justify-content-center text-center">
             <img class="rounded-circle w-50 mb-3" src="{{ member.get_avatar }}">
             <h5>{{ member }}</h5>
             <p class="text-muted">{{ member.get_role_display }}</p>
@@ -16,5 +16,15 @@
       </div>
       <hr>
     {% endfor %}
+
+    <div class="row justify-content-center mt-5">
+      {% for member in singles %}
+        <div class="col-sm-12 col-md-6 col-xl-3 mb-4 justify-content-center text-center">
+          <img class="rounded-circle w-50 mb-3" src="{{ member.get_avatar }}">
+          <h5>{{ member }}</h5>
+          <p class="text-muted">{{ member.get_role_display }}</p>
+        </div>
+      {% endfor %}
+    </div>
   </div>
 {% endblock %}
