--- a/teammanager/templates/teammanager/location.html
+++ b/teammanager/templates/teammanager/location.html
@@ -50,7 +50,7 @@
             {% endif %}
           {% endfor %}
         </div>
-        <div class="d-none d-sm-block d-md-none"><hr></div>
+        <div class="d-block d-sm-block d-md-none"><hr></div>
       </div>
       <div class="col-sm-12 col-md-6">
         <h3 class="text-center">Not</h3>
