Location page now refreshes once a minute

--- a/teammanager/templates/teammanager/location.html
+++ b/teammanager/templates/teammanager/location.html
@@ -1,6 +1,13 @@
 {% extends 'teammanager/base.html' %}
 
 {% load static %}
+
+{% block script %}
+  <script>
+      setInterval(function(){ location.reload(true); }, 10000);
+  </script>
+{% endblock %}
+
 {% block content %}
   <style>
     .gray {
