Standardize CSS, add link to checkin status to navbar

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -41,6 +41,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'man:hours' %}">Hours</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'man:location' %}">Check-in Status</a>
+      </li>
       {% if request.user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'man:outreach_hours_add' %}">Log Outreach</a>
