Password-protect directory

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -44,6 +44,9 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'man:location' %}">Who's In?</a>
       </li>
+      <li>
+        <a class="nav-link" href="{% url 'man:families' %}">Directory</a>
+      </li>
       {% if request.user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'man:admin_add_photo' %}">Add Photos</a>
