Make directory login field a password field

--- a/teammanager/templates/teammanager/families_login.html
+++ b/teammanager/templates/teammanager/families_login.html
@@ -8,7 +8,7 @@
         <p>Please enter the team passcode to access the directory.</p>
         <form action="{% url 'man:families' %}" method="post">
           <div class="form-group">
-            <input class="form-control" type="text" name="passcode">
+            <input class="form-control" type="password" name="passcode">
           </div>
 
           <button class="btn btn-primary">Go</button>
