--- a/teammanager/templates/teammanager/families.html
+++ b/teammanager/templates/teammanager/families.html
@@ -31,7 +31,7 @@
     <div class="row justify-content-center mt-5">
       {% for member in singles %}
         <div class="col-sm-12 col-md-6 col-xl-3 mb-4 justify-content-center text-center">
-          <img class="head rounded-circle w-50 mb-3" src="{{ member.get_avatar }}">
+          <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
           <h5>{{ member }}</h5>
           <p class="text-muted">{{ member.get_role_display }}</p>
         </div>
