--- a/teammanager/templates/teammanager/families.html
+++ b/teammanager/templates/teammanager/families.html
@@ -4,8 +4,8 @@
 {% block style %}
   <style>
     .head {
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       object-fit: cover;
     }
   </style>
@@ -15,22 +15,22 @@
 {% block content %}
   <div class="container-fluid">
     {% for family in families %}
-      <h2 class="mt-5 mb-5 text-center">{{ family }}</h2>
+      <h2 class="mt-4 mb-4 text-center">{{ family }}</h2>
       <div class="row justify-content-center mb-1">
         {% for member in family.member_set.all %}
-          <div class="col-sm-12 col-md-6 col-xl-3 mb-4 justify-content-center text-center">
+          <div class="col-sm-12 col-md-4 col-xl-2 mb-2 justify-content-center text-center">
             <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
             <h5>{{ member }}</h5>
             <p class="text-muted">{{ member.get_role_display }}</p>
           </div>
         {% endfor %}
       </div>
-      <hr>
+      <hr class="my-1">
     {% endfor %}
-    <h2 class="mt-5 mb-5 text-center">Everyone Else</h2>
-    <div class="row justify-content-center mt-5">
+    <h2 class="mt-4 mb-4 text-center">Everyone Else</h2>
+    <div class="row justify-content-center mb-1">
       {% for member in singles %}
-        <div class="col-sm-12 col-md-6 col-xl-3 mb-4 justify-content-center text-center">
+        <div class="col-sm-12 col-md-4 col-xl-2 mb-2 justify-content-center text-center">
           <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
           <h5>{{ member }}</h5>
           <p class="text-muted">{{ member.get_role_display }}</p>
