--- a/teammanager/templates/teammanager/meeting.html
+++ b/teammanager/templates/teammanager/meeting.html
@@ -66,14 +66,14 @@
         <hr>
         <div class="list-group">
           {% for punch in punches %}
-            <a href="#" class="list-group-item list-group-item-action">
+            <li class="list-group-item">
               <span >
                 <small>
                 <img class="head rounded-circle mb-1"
                      src="{{ punch.1.member.get_avatar }}">
                   </small>
               </span>
-              <span>{{ punch.0|date:"g:i a"  }} - {{ punch.1.member.short_name }} punched {{ punch.2 }}</span></a>
+              <span>{{ punch.0|date:"g:i a"  }} - {{ punch.1.member.short_name }} punched {{ punch.2 }}</span></li>
             <!--<a href="#" class="list-group-item list-group-item-action">
             <span>
             {{ punch.0|date:"g:i a"  }}:
