--- a/teammanager/templates/teammanager/meeting.html
+++ b/teammanager/templates/teammanager/meeting.html
@@ -22,6 +22,8 @@
   </style>
   <br>
   <div class="container-fluid">
+  <h2 class="text-center">{{ meeting }}</h2>
+  <hr><br>
     <div class="row mx-xl-5">
       <div class="col-sm-12 col-md-7">
         <h3 class="text-center">
