Fix checkin/punchin terminology

--- a/teammanager/templates/teammanager/location.html
+++ b/teammanager/templates/teammanager/location.html
@@ -34,7 +34,7 @@
       <div class="col-sm-12 col-md-6">
         {% if any_checkins %}
           <h3 class="text-center">
-            Checked In
+            Punched In
           </h3>
           <hr>
           <h5>Students</h5>
@@ -68,7 +68,7 @@
             {% endfor %}
           </div>
         {% else %}
-          <h3 class="text-center">Nobody is Checked In!</h3>
+          <h3 class="text-center">Nobody is Punched In!</h3>
           <div class="d-none d-sm-none d-md-block">
             <hr>
           </div>
