Fix attendance meeting formatting

--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -41,7 +41,7 @@
         </h6>
 
       {% for meeting in meetings %}
-        <a href="{% url "teammanager:meeting" id=meeting.id %}" >{{ meeting.date }}</a>
+        <a href="{% url "teammanager:meeting" id=meeting.id %}" >{{ meeting.date }}</a><br>
       {% endfor %}
 
       </div>
