--- a/teammanager/templates/teammanager/meeting.html
+++ b/teammanager/templates/teammanager/meeting.html
@@ -58,6 +58,9 @@
             {% endif %}
           {% endfor %}
         </div>
+        <div class="d-block d-sm-block d-md-none">
+            <hr>
+        </div>
       </div>
       <div class="col-sm-12 offset-md-1 col-md-4">
         <h3 class="text-center">
