--- a/teammanager/templates/teammanager/partial/hours_table.html
+++ b/teammanager/templates/teammanager/partial/hours_table.html
@@ -1,6 +1,7 @@
 <div class="row">
   {% if students %}
     <div class="col-sm-12 col-lg-6">
+    <h5>Students</h5>
       <table class="table table-striped table-hover text-left" id="table">
         <tr>
           {% for cell in head %}
@@ -10,7 +11,15 @@
         {% for row in students %}
           <tr>
             {% for cell in row %}
-              <td>{{ cell }}</td>
+              {% if forloop.counter == 4 %}
+                {% if cell >= 30 %}
+                  <td class="text-primary"><b>{{ cell }}%</b></td>
+                {% else %}
+                  <td>{{ cell }}%</td>
+                {% endif %}
+              {% else %}
+                <td>{{ cell }}</td>
+              {% endif %}
             {% endfor %}
           </tr>
         {% endfor %}
@@ -19,6 +28,7 @@
   {% endif %}
   {% if adults %}
     <div class="col-sm-12 col-lg-6">
+    <h5>Adults</h5>
       <table class="table table-striped table-hover text-left" id="table">
         <tr>
           {% for cell in head %}
@@ -28,7 +38,15 @@
         {% for row in adults %}
           <tr>
             {% for cell in row %}
-              <td>{{ cell }}</td>
+              {% if forloop.counter == 4 %}
+                {% if cell >= 30 %}
+                  <td class="text-primary"><b>{{ cell }}%</b></td>
+                {% else %}
+                  <td>{{ cell }}%</td>
+                {% endif %}
+              {% else %}
+                <td>{{ cell }}</td>
+              {% endif %}
             {% endfor %}
           </tr>
         {% endfor %}
