Make meetings page 1% less ugly

--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -1,11 +1,13 @@
 {% extends 'teammanager/base.html' %}
 
 {% block content %}
-  <div class="container">
-    <div class="list-group">
-      {% for meeting in meetings %}
-        <a href="{% url "teammanager:meeting" id=meeting.id %}" class="list-group-item list-group-item-action">{{ meeting }}</a>
-      {% endfor %}
+    <br>
+    <div class="d-flex flex-row justify-content-center">
+      <div class="p-0 list-group">
+        {% for meeting in meetings %}
+          <a href="{% url "teammanager:meeting" id=meeting.id %}"
+             class="list-group-item list-group-item-action">{{ meeting }}</a>
+        {% endfor %}
+      </div>
     </div>
-  </div>
 {% endblock %}
