fix color mismatch

--- a/teammanager/templates/teammanager/partial/hours_table.html
+++ b/teammanager/templates/teammanager/partial/hours_table.html
@@ -44,7 +44,7 @@
                 <td onclick="window.location='{% url 'teammanager:member' id=cell.1 %}'">{{ cell.0 }}</td>
               {% elif forloop.counter == 4 %}
                 {% if cell >= 30 %}
-                  <td class="text-primary"><b>{{ cell }}%</b></td>
+                  <td class="text-success"><b>{{ cell }}%</b></td>
                 {% else %}
                   <td>{{ cell }}%</td>
                 {% endif %}
