Page titles and better mobile formatting on member page

--- a/teammanager/templates/teammanager/families_login.html
+++ b/teammanager/templates/teammanager/families_login.html
@@ -1,5 +1,7 @@
 {% extends 'teammanager/base.html' %}
 
+{% block title %}Directory - Pigpen{% endblock %}
+
 {% block content %}
   <div class="row justify-content-center">
     <div class="card mt-3">
