--- a/teammanager/templates/teammanager/location.html
+++ b/teammanager/templates/teammanager/location.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}Who's In? - Pigpen{% endblock %}
+
 {% block script %}
   <script>
       setInterval(function () {
