--- a/teammanager/templates/teammanager/meeting.html
+++ b/teammanager/templates/teammanager/meeting.html
@@ -1,5 +1,7 @@
 {% extends 'teammanager/base.html' %}
 
+{% block title %}{{ meeting }} - Pigpen{% endblock %}
+
 {% load static %}
 
 {% block content %}
