--- a/teammanager/templates/teammanager/meetings.html
+++ b/teammanager/templates/teammanager/meetings.html
@@ -1,5 +1,7 @@
 {% extends 'teammanager/base.html' %}
 
+{% block title %}Meetings - Pigpen{% endblock %}
+
 {% block content %}
     <br>
     <div class="d-flex flex-row justify-content-center">
