Better looking hours table

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -21,6 +21,19 @@
 
   <meta name="theme-color" content="#2b2b2b">
 
+  <style>
+    .head {
+      width: 3em;
+      height: 3em;
+      object-fit: cover;
+    }
+
+    .head-sm {
+      width: 2em;
+      height: 2em;
+      object-fit: cover;
+    }
+  </style>
   {% block script %}{% endblock %}
   {% block style %}{% endblock %}
 </head>
