--- a/teammanager/templates/teammanager/partial/hours_table.html
+++ b/teammanager/templates/teammanager/partial/hours_table.html
@@ -1,19 +1,25 @@
 <div class="row">
   {% if students %}
     <div class="col-sm-12 col-lg-6">
-    <h5>Students</h5>
+      <h5>Students</h5>
       <table class="table table-striped table-hover text-left" id="table">
+        <thead class="thead-dark">
         <tr>
           {% for cell in head %}
             <th>{{ cell }}</th>
           {% endfor %}
         </tr>
+        </thead>
+        <tbody>
         {% for row in students %}
           <tr>
             {% for cell in row %}
-              {% if forloop.counter == 1 %}
-                <td onclick="window.location='{% url 'teammanager:member' id=cell.1 %}'">{{ cell.0 }}</td>
-              {% elif forloop.counter == 4 %}
+              {% if forloop.counter == 1 %} <!-- The member's name -->
+                <td onclick="window.location='{% url 'teammanager:member' id=cell.id %}'">
+                  <span><small><img class="head-sm rounded-circle"
+                             src="{{ cell.get_avatar }}"></small></span> {{ cell.short_name }}
+                </td>
+              {% elif forloop.counter == 4 %} <!-- The member's attendance -->
                 {% if cell >= 30 %}
                   <td class="text-success"><b>{{ cell }}%</b></td>
                 {% else %}
@@ -25,24 +31,31 @@
             {% endfor %}
           </tr>
         {% endfor %}
+        </tbody>
       </table>
     </div>
   {% endif %}
   {% if adults %}
     <div class="col-sm-12 col-lg-6">
-    <h5>Adults</h5>
+      <h5>Adults</h5>
       <table class="table table-striped table-hover text-left" id="table">
+        <thead class="thead-dark">
         <tr>
           {% for cell in head %}
             <th>{{ cell }}</th>
           {% endfor %}
         </tr>
+        </thead>
+        <tbody>
         {% for row in adults %}
           <tr>
             {% for cell in row %}
-              {% if forloop.counter == 1 %}
-                <td onclick="window.location='{% url 'teammanager:member' id=cell.1 %}'">{{ cell.0 }}</td>
-              {% elif forloop.counter == 4 %}
+              {% if forloop.counter == 1 %} <!-- The member's name -->
+                <td onclick="window.location='{% url 'teammanager:member' id=cell.id %}'">
+                  <span><small><img class="head-sm rounded-circle"
+                             src="{{ cell.get_avatar }}"></small></span> {{ cell.short_name }}
+                </td>
+              {% elif forloop.counter == 4 %} <!-- The member's attendance -->
                 {% if cell >= 30 %}
                   <td class="text-success"><b>{{ cell }}%</b></td>
                 {% else %}
@@ -54,6 +67,7 @@
             {% endfor %}
           </tr>
         {% endfor %}
+        </tbody>
       </table>
     </div>
     </div>
