Attendance is now based on hours

--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -54,7 +54,7 @@
           {% else %}
             <span>{{ attendance_percent }}%</span>
           {% endif %}
-          )
+          of hours )
         </h6>
 
         {% for meeting in meetings %}
